crates/chat/tests/snapshots/pi_commands__settings_interface_tab.snap
---
source: crates/chat/tests/pi_commands.rs
expression: "rows.join(\"\\n\")"
---
╭─ Settings ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│❯  ⬢ Model (4)   ▐🎨 Interface (4)▌   ⚙ Server (3)                                                                    │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Type to search all settings                                                                                           │
│                                                                                                                      │
│  cl_resize_policy     rebuild                                                                                        │
│  cl_showthinking      true                                                                                           │
│  cl_showtools         true                                                                                           │
│● cl_theme             cyanotype                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│Doc for cl_resize_policy.                                                                                             │
│↑/↓ navigate · ←/→ tab · Enter change · type to search · Esc close                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
