crates/chat/tests/snapshots/pi_commands__settings_model_tab.snap
---
source: crates/chat/tests/pi_commands.rs
expression: "rows.join(\"\\n\")"
---
╭─ Settings ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│❯ ▐⬢ Model (4)▌   🎨 Interface (4)    ⚙ Server (3)                                                                    │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Type to search all settings                                                                                           │
│                                                                                                                      │
│  ai_compact_threshold 80                                                                                             │
│  ai_fastmode          false                                                                                          │
│● ai_model             anthropic/claude-fable-5                                                                       │
│● ai_thinking          medium                                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│Doc for ai_compact_threshold.                                                                                         │
│↑/↓ navigate · ←/→ tab · Enter change · type to search · Esc close                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
