crates/chat/tests/snapshots/pi_commands__settings_search.snap
---
source: crates/chat/tests/pi_commands.rs
expression: "rows.join(\"\\n\")"
---
╭─ Settings ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│❯ ▐⬢ Model (1)▌   🎨 Interface (1)    ⚙ Server (0)                                                                    │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Search: think_                                                                                                        │
│                                                                                                                      │
│⬢ Model                                                                                                               │
│● ai_thinking          medium                                                                                         │
│🎨 Interface                                                                                                          │
│  cl_showthinking      true                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│Doc for ai_thinking.                                                                                                  │
│↑/↓ navigate · ←/→ tab · Enter change · type to search · Esc close                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
